--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         body {
             margin: 0;
-            overflow: hidden;
+            overflow: hidden; /* Ensuring no hidden overflow issues */
         }
         #lottie-container {
             position: fixed;
@@ -40,18 +40,20 @@
         path: 'data.json' // Path to your Lottie JSON file
     });
 
-    // Check if Lottie animation is ready
+    // Listener for when the Lottie animation DOM is loaded
     lottieAnimation.addEventListener('DOMLoaded', () => {
         console.log('Lottie animation DOM loaded.');
-        document.body.style.height = `${window.innerHeight * 3}px`; // Creates enough scroll space
+        document.body.style.height = `${window.innerHeight * 3}px`; // Adjust scrollable height
+        console.log(`Body height set to ${document.body.style.height}`);
     });
 
-    // Check if data is fully ready
+    // Listener for when animation frames are ready
     lottieAnimation.addEventListener('data_ready', () => {
         console.log('Lottie data is ready, animation frames loaded.');
+        console.log(`Total frames available: ${lottieAnimation.totalFrames}`);
     });
 
-    // Add a global scroll event listener
+    // Check if scroll events are being detected at all
     window.addEventListener('scroll', () => {
         console.log('Global scroll event detected.');
     });
@@ -60,26 +62,49 @@
     window.addEventListener('scroll', () => {
         console.log('Scroll event detected inside animation binding.');
         if (lottieAnimation.totalFrames > 0) {
-            console.log(`Total frames: ${lottieAnimation.totalFrames}`);
-            const scrollTop = window.scrollY || window.pageYOffset;
-            console.log(`Scroll position: ${scrollTop}`);
+            console.log(`Total frames detected: ${lottieAnimation.totalFrames}`);
 
+            // Calculate scroll values
+            const scrollTop = window.scrollY || window.pageYOffset;
+            console.log(`Current scroll position: ${scrollTop}`);
+            
             const maxScrollTop = document.documentElement.scrollHeight - window.innerHeight;
-            console.log(`Max scroll position: ${maxScrollTop}`);
+            console.log(`Max scrollable height: ${maxScrollTop}`);
+
+            // Check if scrollable height is being correctly set
+            if (maxScrollTop <= 0) {
+                console.warn('Max scrollable height is zero or negative. Check scroll-space height or body height setting.');
+            }
 
             const scrollFraction = scrollTop / maxScrollTop;
-            console.log(`Scroll fraction: ${scrollFraction}`);
+            console.log(`Scroll fraction (scrollTop / maxScrollTop): ${scrollFraction}`);
 
+            // Prevent NaN or infinity errors
+            if (isNaN(scrollFraction) || !isFinite(scrollFraction)) {
+                console.error('Scroll fraction calculation failed, check scrollTop and maxScrollTop values.');
+                return;
+            }
+
+            // Calculate the frame to go to
             const frame = Math.min(
                 lottieAnimation.totalFrames * scrollFraction,
                 lottieAnimation.totalFrames - 1
             );
-            console.log(`Animating to frame: ${frame}`);
+            console.log(`Calculated frame to go to: ${frame}`);
+
+            // Command to update the animation to the correct frame
             lottieAnimation.goToAndStop(frame, true);
+            console.log(`Animation updated to frame: ${frame}`);
         } else {
-            console.log('Animation frames not available yet.');
+            console.error('Animation frames are not available yet or set to zero.');
         }
     });
+
+    // Listener to check when the animation is completely ready
+    lottieAnimation.addEventListener('complete', () => {
+        console.log('Lottie animation has completed playback.');
+    });
+
 </script>
 
 </body>
