--- a/index.html
+++ b/index.html
@@ -20,21 +20,24 @@
         .scroll-space {
             height: 300vh; /* Creates enough space for scrolling */
         }
-        .button-container {
+        .button-bar {
             position: fixed;
             top: 0;
-            right: 10px;
-            height: 70px;
+            left: 0;
+            width: 100%;
+            height: 70px; /* Height of the black bar */
             display: flex;
-            flex-direction: column;
-            justify-content: center;
-            gap: 10px; /* Space between buttons */
+            justify-content: flex-end; /* Aligns buttons to the right */
+            align-items: center; /* Centers buttons vertically within the bar */
+            padding-right: 10px; /* Space from the right edge */
+            background: transparent; /* Ensures bar does not cover the animation */
         }
-        .button-container img {
-            height: 60px; /* Resizes images to 60px height */
-            width: auto; /* Maintains the aspect ratio */
-            max-width: 100%; /* Ensures the image does not exceed its container */
-            max-height: 100%;
+        .button-bar a {
+            margin-left: 10px; /* Space between buttons */
+        }
+        .button-bar img {
+            height: 60px; /* Resize images to 60px height */
+            width: auto; /* Maintain aspect ratio */
             cursor: pointer;
         }
     </style>
@@ -44,8 +47,8 @@
 <div id="lottie-container"></div>
 <div class="scroll-space"></div>
 
-<!-- Button Container -->
-<div class="button-container">
+<!-- Button Bar over the Lottie Animation -->
+<div class="button-bar">
     <a href="https://www.google.com" target="_blank">
         <img src="1Butt.png" alt="Button 1">
     </a>
