--- a/index.html
+++ b/index.html
@@ -7,58 +7,66 @@
     <style>
         body {
             margin: 0;
+            background-color: black; /* Set the background of the site to black */
             overflow-x: hidden; /* Ensure only vertical scroll is considered */
+            display: flex;
+            justify-content: center;
+            align-items: flex-start;
+            min-height: 100vh;
+        }
+        .lottie-container {
+            position: relative;
+            width: 100%;
+            max-width: 1920px; /* Set the maximum width of the container */
+            height: 100vh;
+            overflow: hidden;
         }
         #lottie-container {
-            position: fixed;
+            position: absolute;
             top: 0;
             left: 0;
             width: 100%;
-            height: 100vh;
+            height: 100%;
             pointer-events: none;
         }
-        .scroll-space {
-            height: 300vh; /* Creates enough space for scrolling */
-        }
         .button-bar {
-            position: fixed;
+            position: absolute;
             top: 0;
-            left: 0;
-            width: 100%;
+            right: 10px;
             height: 70px; /* Height of the black bar */
             display: flex;
             justify-content: flex-end; /* Aligns buttons to the right */
             align-items: center; /* Centers buttons vertically within the bar */
             padding-right: 10px; /* Space from the right edge */
-            background: transparent; /* Ensures bar does not cover the animation */
-        }
-        .button-bar a {
-            margin-left: 10px; /* Space between buttons */
+            gap: 10px; /* Space between buttons */
         }
         .button-bar img {
             height: 60px; /* Resize images to 60px height */
             width: auto; /* Maintain aspect ratio */
             cursor: pointer;
         }
+        .scroll-space {
+            height: 300vh; /* Creates enough space for scrolling */
+        }
     </style>
 </head>
 <body>
 
-<div id="lottie-container"></div>
-<div class="scroll-space"></div>
-
-<!-- Button Bar over the Lottie Animation -->
-<div class="button-bar">
-    <a href="https://www.google.com" target="_blank">
-        <img src="1Butt.png" alt="Button 1">
-    </a>
-    <a href="https://www.google.com" target="_blank">
-        <img src="2Butt.png" alt="Button 2">
-    </a>
-    <a href="https://www.google.com" target="_blank">
-        <img src="3Butt.png" alt="Button 3">
-    </a>
+<div class="lottie-container">
+    <div id="lottie-container"></div>
+    <div class="button-bar">
+        <a href="https://www.google.com" target="_blank">
+            <img src="1Butt.png" alt="Button 1">
+        </a>
+        <a href="https://www.google.com" target="_blank">
+            <img src="2Butt.png" alt="Button 2">
+        </a>
+        <a href="https://www.google.com" target="_blank">
+            <img src="3Butt.png" alt="Button 3">
+        </a>
+    </div>
 </div>
+<div class="scroll-space"></div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.12.0/lottie.min.js"></script>
 <script>
