--- a/index.html
+++ b/index.html
@@ -3,69 +3,107 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lottie Animation</title>
-    <script src="https://unpkg.com/lottie-web@latest/build/player/lottie.min.js"></script>
+    <title>Lottie Scroll Animation</title>
     <style>
         body {
             margin: 0;
-            overflow: hidden;
-            background: black;
+            overflow-x: hidden; /* Ensure only vertical scroll is considered */
         }
         #lottie-container {
-            position: relative;
-            width: 100vw;
-            height: 100vh;
-            overflow: hidden;
-        }
-        #lottie {
-            position: absolute;
+            position: fixed;
             top: 0;
             left: 0;
             width: 100%;
-            height: 100%;
+            height: 100vh;
+            pointer-events: none;
+        }
+        .scroll-space {
+            height: 300vh; /* Creates enough space for scrolling */
         }
     </style>
 </head>
 <body>
-    <div id="lottie-container">
-        <div id="lottie"></div>
-    </div>
-    <script>
-        document.addEventListener('DOMContentLoaded', function() {
-            console.log("Script loaded. Initializing Lottie animation.");
 
-            const animation = lottie.loadAnimation({
-                container: document.getElementById('lottie'),
-                renderer: 'svg',
-                loop: true,
-                autoplay: false,
-                path: 'https://test-rose-theta.vercel.app/data.json'
-            });
+<div id="lottie-container"></div>
+<div class="scroll-space"></div>
 
-            animation.addEventListener('DOMLoaded', () => {
-                console.log("Lottie animation DOM loaded.");
-                console.log("Lottie data is ready, animation frames loaded.");
-                console.log("Total frames available:", animation.totalFrames);
-            });
+<script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.12.0/lottie.min.js"></script>
+<script>
+    console.log('Script loaded. Initializing Lottie animation.');
 
-            window.addEventListener('resize', adjustLayout);
-            document.addEventListener('scroll', () => {
-                const maxScrollTop = document.documentElement.scrollHeight - window.innerHeight;
-                const scrollFraction = window.scrollY / maxScrollTop;
-                const frame = scrollFraction * animation.totalFrames;
-                animation.goToAndStop(frame, true);
-            });
+    // Load the Lottie animation JSON file
+    const lottieAnimation = lottie.loadAnimation({
+        container: document.getElementById('lottie-container'),
+        renderer: 'svg',
+        loop: false,
+        autoplay: false,
+        path: 'data.json' // Path to your Lottie JSON file
+    });
 
-            function adjustLayout() {
-                console.log("Adjusting layout for window resize.");
-                const lottieContainer = document.getElementById('lottie-container');
-                const lottieDimensions = lottieContainer.getBoundingClientRect();
-                console.log("Lottie Container Dimensions:", lottieDimensions);
-                console.log("Window Dimensions:", window.innerWidth, window.innerHeight);
+    // Listener for when the Lottie animation DOM is loaded
+    lottieAnimation.addEventListener('DOMLoaded', () => {
+        console.log('Lottie animation DOM loaded.');
+        document.body.style.height = `${window.innerHeight * 3}px`; // Adjust scrollable height
+        console.log(`Body height set to ${document.body.style.height}`);
+    });
+
+    // Listener for when animation frames are ready
+    lottieAnimation.addEventListener('data_ready', () => {
+        console.log('Lottie data is ready, animation frames loaded.');
+        console.log(`Total frames available: ${lottieAnimation.totalFrames}`);
+    });
+
+    // Check if scroll events are being detected globally
+    window.addEventListener('scroll', () => {
+        console.log('Global scroll event detected on window.');
+    });
+
+    // Directly check if document scrolls are detected
+    document.addEventListener('scroll', () => {
+        console.log('Scroll event detected on document.');
+    });
+
+    // Bind the animation playback to the scroll event
+    window.addEventListener('scroll', () => {
+        console.log('Scroll event detected inside animation binding.');
+        if (lottieAnimation.totalFrames > 0) {
+            console.log(`Total frames detected: ${lottieAnimation.totalFrames}`);
+
+            const scrollTop = window.scrollY || window.pageYOffset;
+            console.log(`Current scroll position: ${scrollTop}`);
+            
+            const maxScrollTop = document.documentElement.scrollHeight - window.innerHeight;
+            console.log(`Max scrollable height: ${maxScrollTop}`);
+
+            if (maxScrollTop <= 0) {
+                console.warn('Max scrollable height is zero or negative. Check scroll-space height or body height setting.');
             }
 
-            adjustLayout(); // Initial adjustment
-        });
-    </script>
+            const scrollFraction = scrollTop / maxScrollTop;
+            console.log(`Scroll fraction (scrollTop / maxScrollTop): ${scrollFraction}`);
+
+            if (isNaN(scrollFraction) || !isFinite(scrollFraction)) {
+                console.error('Scroll fraction calculation failed, check scrollTop and maxScrollTop values.');
+                return;
+            }
+
+            const frame = Math.min(
+                lottieAnimation.totalFrames * scrollFraction,
+                lottieAnimation.totalFrames - 1
+            );
+            console.log(`Calculated frame to go to: ${frame}`);
+            lottieAnimation.goToAndStop(frame, true);
+            console.log(`Animation updated to frame: ${frame}`);
+        } else {
+            console.error('Animation frames are not available yet or set to zero.');
+        }
+    });
+
+    // Listener to check when the animation is completely ready
+    lottieAnimation.addEventListener('complete', () => {
+        console.log('Lottie animation has completed playback.');
+    });
+</script>
+
 </body>
 </html>
