--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             left: 50%;
             transform: translateX(-50%);
             width: 100%;
-            height: 100vh; /* Full height initially */
+            height: 100vh; /* Default height */
             pointer-events: none;
         }
         .menu-bar {
@@ -76,9 +76,10 @@
         // Position menu bar correctly relative to animation
         menuBar.style.top = `${lottieRect.top}px`;
 
-        // Adjust animation height based on aspect ratio
-        lottieContainer.style.height = `${window.innerHeight - menuBarHeight}px`;
-        
+        // Calculate and set animation height based on its aspect ratio
+        const aspectRatio = lottieRect.width / lottieRect.height;
+        lottieContainer.style.height = `${(window.innerHeight - menuBarHeight) / aspectRatio}px`;
+
         console.log('Layout adjusted.');
         console.log(`Menu bar width: ${menuBar.style.width}`);
         console.log(`Menu bar top position: ${menuBar.style.top}`);
@@ -107,26 +108,4 @@
     window.addEventListener('scroll', () => {
         if (lottieAnimation.totalFrames > 0) {
             const scrollTop = window.scrollY || window.pageYOffset;
-            const maxScrollTop = document.documentElement.scrollHeight - window.innerHeight;
-
-            if (maxScrollTop <= 0) {
-                console.warn('Max scrollable height is zero or negative.');
-            }
-
-            const scrollFraction = scrollTop / maxScrollTop;
-            const frame = Math.min(
-                lottieAnimation.totalFrames * scrollFraction,
-                lottieAnimation.totalFrames - 1
-            );
-            lottieAnimation.goToAndStop(frame, true);
-        }
-    });
-
-    // Listener to check when the animation is completely ready
-    lottieAnimation.addEventListener('complete', () => {
-        console.log('Lottie animation has completed playback.');
-    });
-</script>
-
-</body>
-</html>
+            const maxScrollTop = document.documentElement.scrollHeight - window.innerHeigh
