--- a/index.html
+++ b/index.html
@@ -12,17 +12,15 @@
         #lottie-container {
             position: fixed;
             top: 0;
-            left: 50%;
-            transform: translateX(-50%);
+            left: 0;
             width: 100%;
-            height: 100vh; /* Full height initially */
+            height: 100vh;
             pointer-events: none;
         }
         .menu-bar {
             position: fixed;
             top: 0;
-            left: 50%;
-            transform: translateX(-50%);
+            left: 0;
             height: 7vh; /* 7% of viewport height */
             background-color: red; /* Red color for the menu bar */
             color: white;
@@ -49,6 +47,8 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.12.0/lottie.min.js"></script>
 <script>
+    console.log('Script loaded. Initializing Lottie animation.');
+
     const lottieContainer = document.getElementById('lottie-container');
     const menuBar = document.getElementById('menu-bar');
 
@@ -61,7 +61,6 @@
         path: 'data.json' // Path to your Lottie JSON file
     });
 
-    // Function to adjust layout
     function adjustLayout() {
         const lottieRect = lottieContainer.getBoundingClientRect();
         const menuBarHeight = menuBar.offsetHeight;
@@ -76,14 +75,9 @@
         // Position menu bar correctly relative to animation
         menuBar.style.top = `${lottieRect.top}px`;
 
-        // Calculate and set animation height based on its aspect ratio
-        const aspectRatio = lottieRect.width / lottieRect.height;
-        lottieContainer.style.height = `${(window.innerHeight - menuBarHeight) / aspectRatio}px`;
-
         console.log('Layout adjusted.');
         console.log(`Menu bar width: ${menuBar.style.width}`);
         console.log(`Menu bar top position: ${menuBar.style.top}`);
-        console.log(`Animation container height: ${lottieContainer.style.height}`);
     }
 
     // Initial adjustment
