--- a/index.html
+++ b/index.html
@@ -3,43 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lottie Scroll Animation</title>
+    <title>Lottie Animation</title>
     <style>
         body {
             margin: 0;
-            overflow-x: hidden; /* Ensure only vertical scroll is considered */
+            overflow-x: hidden; /* Ensure no horizontal scroll */
         }
         #lottie-container {
             position: fixed;
             top: 0;
             left: 0;
             width: 100%;
-            height: 100vh;
-            pointer-events: none;
+            height: 100vh; /* Full viewport height */
+            pointer-events: none; /* Avoid interaction with animation container */
         }
         .menu-bar {
             position: fixed;
             top: 0;
             left: 0;
-            height: 7vh; /* 7% of viewport height */
-            background-color: red; /* Red color for the menu bar */
+            height: 7vh; /* Fixed height */
+            background-color: red; /* Red color */
             color: white;
             display: flex;
             align-items: center;
             justify-content: center;
-            z-index: 10; /* Ensure it is above other content */
-            width: 100%; /* Default width */
+            z-index: 10; /* Above other content */
+            width: 100%; /* Default width, to be adjusted */
             box-sizing: border-box;
         }
         .scroll-space {
-            height: 300vh; /* Creates enough space for scrolling */
+            height: 300vh; /* Ensure enough scroll space */
         }
     </style>
 </head>
 <body>
 
 <div class="menu-bar" id="menu-bar">
-    <!-- Menu content goes here -->
     Menu Bar
 </div>
 <div id="lottie-container"></div>
@@ -63,20 +62,24 @@
 
     function adjustLayout() {
         const lottieRect = lottieContainer.getBoundingClientRect();
-        const menuBarHeight = menuBar.offsetHeight;
+        const menuBarHeight = 7 * window.innerHeight / 100; // 7% of viewport height
 
         console.log('Adjusting layout...');
         console.log(`Lottie container width: ${lottieRect.width}px`);
         console.log(`Lottie container height: ${lottieRect.height}px`);
         console.log(`Menu bar height: ${menuBarHeight}px`);
 
-        // Set menu bar width to match animation width
+        // Adjust menu bar width to match animation width
         menuBar.style.width = `${lottieRect.width}px`;
-        // Position menu bar correctly relative to animation
+        // Set menu bar height
+        menuBar.style.height = `${menuBarHeight}px`;
+
+        // Adjust menu bar top position to ensure it is fixed relative to the animation
         menuBar.style.top = `${lottieRect.top}px`;
 
         console.log('Layout adjusted.');
         console.log(`Menu bar width: ${menuBar.style.width}`);
+        console.log(`Menu bar height: ${menuBar.style.height}`);
         console.log(`Menu bar top position: ${menuBar.style.top}`);
     }
 
